# django-react

./: README.md  pyproject.toml
react_django/: Makefile  codeUsedinShell.py  db.sqlite3  fakeData.py  manage.py
react_django/cars/: filters.py  models.py  serializers.py  views.py
react_django/cars/migrations/: 0001_initial.py  0002_alter_car_model.py
react_django/frontend/: package-lock.json  package.json
react_django/frontend/src/: App.css  App.jsx  Table.jsx
react_django/persons/: models.py  serializers.py  views.py
react_django/persons/migrations/: 0001_initial.py  0002_person_cars.py  0003_alter_person_name_alter_person_surname.py  0004_rel.py  0005_delete_rel.py  0006_rel.py  0007_delete_rel.py
react_django/react_django_task/: asgi.py  settings.py  urls.py  wsgi.py
